# python_labs

./: README.md  pyproject.toml  pyrightconfig.json  ООП.md
data/lab04/: a.txt  b.txt  input.txt  report.csv
data/lab05/samples/: FIO.json  game_json to csv.json  no_header.csv
data/lab06/samples/: people.csv  people.json  people.txt
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
lab01/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex07.py
src/: __init__.py
src/lab01/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex07.py
src/lab02/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py
src/lab03/: README.md  ex01.py  ex02.py  ex03.py  text_stats.py
src/lab04/: README.md  io_txt_scv.py  text_report.py
src/lab05/: csv_xlsx.py  json_csv.py
src/lab06/: cli.convert.py  cli.text.py
src/lab07/: README.md
src/lab08/: README.md  serialize.py
src/lab09/: README.md  group.py  inst for every method.md  models.py  top_n.py
src/lab10/: README.md  linkedlist.py  structures.py
src/lib/: text.py
tests/lab07/: test_json_csv.py  test_text.py
