[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lab07"
version = "0.1.0"
dependencies = [
  "requests>=2.32",
  "pandas>=2.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.0",
  "ruff>=0.6"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --color=yes"
pythonpath = [
    ".", "src"
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
extraPaths = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportImportCycles = false
reportUnusedImport = "none"
reportUnusedClass = "none"
reportUnusedFunction = "none"
reportUnusedVariable = "none"
executionEnvironments = [
  { root = ".", pythonVersion = "3.11", extraPaths = ["src"] }
]